@@ -388,7 +388,7 @@ scm_eval_0str (const char *expr)
 SCM_DEFINE (scm_eval_string, "eval-string", 1, 0, 0, 
             (SCM string),
 	    "Evaluate @var{string} as the text representation of a Scheme form\n"
-	    "or forms, and return whatever value they produce."
+	    "or forms, and return whatever value they produce.\n"
 	    "Evaluation takes place in (interaction-environment).")
 #define FUNC_NAME s_scm_eval_string
 {
